# caiso_connector

./: .coveragerc  .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  LMP_chart.html  LMP_database_metadata.ipynb  LMP_metadata.ipynb  LMP_plot.ipynb  README.md  Session.vim  amp_metadata.ipynb  async_download.py  buildspec.yml  chart.html  docker-compose.yml  process_df.ipynb  push_docker.sh  pyproject.toml  scratch.py  stats
.github/workflows/: python-app.yml
app/: config.py  main.py
docs/: Makefile  caiso_connector.rst  conf.py  index.rst
docs/_autosummary/: caiso_connector.html
docs/_build/doctrees/: caiso_connector.doctree  environment.pickle  etl.doctree  helpers.doctree  index.doctree  modules.doctree  temp_data.doctree
docs/_build/doctrees/_autosummary/: caiso_connector.doctree  helpers.doctree
docs/_build/html/: .buildinfo  caiso_connector.html  etl.html  genindex.html  helpers.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  temp_data.html
docs/_build/html/_autosummary/: helpers.html
docs/_build/html/_modules/: caiso_connector.html  helpers.html
docs/_build/html/_sources/: etl.rst.txt  index.rst.txt  modules.rst.txt  temp_data.rst.txt
docs/_build/html/_sources/_autosummary/: helpers.rst.txt
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_sources/_autosummary/: caiso_connector.rst.txt
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
src/: async_etl.py  async_etl_dup.py  caiso_connector.py  connector.py  constants.py  etl.py  helpers.py  main.py  models.py
src/cron_jobs/: dateInfo.txt  delete_cron_jobs.py  hello.py  run_cron.py  write_date.py
src/data/: seed.csv
src/input/: caiso_connector.py
src/process/: create_sql_database.py  etl.py
src/temp_data/: __init__.py
tests/: conftest.py  test_api.py  test_connector.py  test_crud.py  test_env.py  test_helpers.py  test_lmp.db
