[tool.poetry]
name = "caiso_connector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "2.22.0"
pytest = "5.3.2"
pandas = "0.25.3"
numpy = "1.18.0"
fastapi = "^0.45.0"
uvicorn = "^0.11.1"
flake8 = "^3.8.3"
isort = "^4.3.21"
pytest-cov = "^2.10.0"
codecov = "^2.1.7"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
altair = "^4.0"
vega_datasets = "^0.8.0"
vega = "=1.3"
sphinx = "^2.3"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"
pynvim = "^0.4.1"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

